# huffman-coder

./: Cargo.toml
benches/: bench_huffman.rs
src/: huffman.rs  main.rs  test.rs
